MYEM-2677 #time 1d #comment Fix tooltip not showing on mobile, by adding selection even that replicates tooltip behaviour

--- a/src/modules/Analysis/components/AnalysisChart/AnalysisChart.scss
+++ b/src/modules/Analysis/components/AnalysisChart/AnalysisChart.scss
@@ -2,6 +2,9 @@
 
 .apexcharts-canvas {
     overflow: hidden;
+    .apexcharts-tooltip-marker {
+        display: none;
+    }
 }
 .analysisChartCircleContent {
     position: absolute;
@@ -11,7 +14,7 @@
     border-radius: 50%;
     height: 160px;
     width: 160px;
-    @include sm {
+    @include md {
         height: 212px;
         width: 212px;
     }
